@@ -5,6 +5,7 @@
 	(epackage-lint-extra-buffer-run-other-autoload): New.
 	(epackage-devel-information-description-short): Check -*- stanzas.
 	(epackage-devel-information-date-lm): Add Last-Modified.
+	(epackage-devel-information-license-gpl-standard): Improve regexps.
 
 2011-12-30 Fri  Jari Aalto  <jari.aalto@cante.net>
 
